<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentProfile"
    android:background="@color/backgroundColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <ImageButton
            android:id="@+id/btnSetting"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_baseline_settings_24" />

        <TextView
            android:id="@+id/tvProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/rubikmono"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="28sp"
            tools:ignore="RelativeOverlap" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="30dp"
            android:layout_marginTop="75dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_below="@id/btnSetting"
                android:background="#D3C5C5"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        app:cardCornerRadius="30dp">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:background="#D3C5C5"
                            android:src="@drawable/ic_baseline_person_24" />
                    </androidx.cardview.widget.CardView>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="120dp"
                        android:layout_marginTop="140dp"
                        android:src="@drawable/ic_baseline_photo_camera_24" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="250dp"
                    android:layout_height="325dp"
                    android:layout_marginTop="30dp">

                    <LinearLayout
                        android:id="@+id/fieldNama"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nama"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvNama"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/nama_pengguna"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/fieldUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/fieldNama"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/username"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvUsername"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/username_pengguna"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/fieldEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/fieldUsername"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/e_mail"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/email_pengguna"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/fieldAlamat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/fieldEmail"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/address"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvAlamat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/alamat_pengguna"
                            android:textSize="20sp" />
                    </LinearLayout>
                </RelativeLayout>

                <Button
                    android:id="@+id/btnLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:backgroundTint="@color/backgroundColor"
                    android:text="@string/logout" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</FrameLayout>