<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="event"
            type="com.pbp_b_kelompok_1.ticketplease.models.Event" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundColor">

            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/backgroundColor"
                    android:src="@drawable/ic_baseline_arrow_back_ios_24" />

                <TextView
                    android:id="@+id/tvEventDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/rubikmono"
                    android:text="@string/your_order"
                    android:textColor="@color/white"
                    android:textSize="28sp" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_below="@id/header"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                app:cardBackgroundColor="@color/putihCustom"
                app:cardCornerRadius="20dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#d3c5c5">

                    <TextView
                        android:id="@+id/tvEventNameOrder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:hint="@string/judulevent"
                        android:text="@{event.namaEvent}"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvEventPriceOrder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/harga"
                        android:text="@{String.valueOf(event.hargaEvent)}"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="85dp"
                    android:text="@string/ketentuan"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvKetentuan1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="115dp"
                    android:text="@string/tiket_hanya_berlaku_untuk_satu_orang"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvKetentuan2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="145dp"
                    android:text="@string/tiket_yang_sudah_dibeli_tidak_dapat_direfund"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvKetentuan3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="175dp"
                    android:text="@string/wajib_menunjukkan_tiket_saat_datang_ke_lokasi"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card1"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/pilih_section"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white">

                        <Spinner
                            android:id="@+id/spinnerSection"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:entries="@array/section_array"
                            android:textColor="@color/black" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/pilih_seat"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:background="@color/white">

                        <Spinner
                            android:id="@+id/spinnerSeatNumber"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:entries="@array/seat_array"
                            android:spinnerMode="dropdown" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fieldWaktu"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/line2"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/pilih_waktu"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@color/white">

                    <Spinner
                        android:id="@+id/spinnerTime"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:entries="@array/time_array"
                        android:spinnerMode="dropdown"
                        android:textColor="@color/black" />
                </RelativeLayout>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fieldWaktu"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                app:cardBackgroundColor="@color/putihCustom"
                app:cardCornerRadius="20dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#D3C5C5">

                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@{event.tanggalEvent}"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="10dp"
                        android:text="@{String.valueOf(event.hargaEvent)}"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvPaymentMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="80dp"
                    android:text="@string/metode_pembayaran"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rbVirtualAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="40dp"
                        android:text="@string/virtual_account" />

                    <RadioButton
                        android:id="@+id/rbCreditCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/credit_card" />

                    <RadioButton
                        android:id="@+id/rbDebitCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/debit_card" />

                    <RadioButton
                        android:id="@+id/rbEWallet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/e_wallet" />
                </RadioGroup>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnPesan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card2"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/pesan"
                android:textColor="@color/backgroundColor"
                app:backgroundTint="@color/putihCustom"
                app:cornerRadius="120dp" />
        </RelativeLayout>
    </ScrollView>
</layout>